# wca-api-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  download_csv_export.sh  fig.yml
spec/: competitors_spec.rb  records_spec.rb
src/: main.rs
src/data/: Cargo.toml
src/data/src/: lib.rs
tests/: competitor_test.rs  events_test.rs  record_test.rs
tests/fixtures/: events.tsv  persons.tsv  ranks-average.tsv  ranks-single.tsv  results.tsv
